--- a/Chapitre 10 - Requetes SQLAlchemy fines.ipynb
+++ b/Chapitre 10 - Requetes SQLAlchemy fines.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Chapitre 9 - Requêtes SQLAlchemy fines et petites astuces\n",
+    "Chapitre 10 - Requêtes SQLAlchemy fines et petites astuces\n",
     "===\n",
     "\n",
     "Dans ce chapitre, nous verrons un ensemble de petites modifications de requêtes. Entre autres, nous verrons :\n",
@@ -19,7 +19,7 @@
     "\n",
     "Ce chapitre pourra vous servir de documentation à l'avenir. L'important est de comprendre l'ensemble des possibilités.\n",
     "\n",
-    "Pour faire cet ensemble de requête, on utilisera le bloc code suivant :"
+    "Pour faire cet ensemble de requêtes, on utilisera le bloc code suivant :"
    ]
   },
   {
@@ -33,7 +33,7 @@
     "\n",
     "app = Flask(\"Application\")\n",
     "# On configure la base de données\n",
-    "app.config['SQLALCHEMY_DATABASE_URI'] = 'mysql://gazetteer_user:password@localhost/gazetteer'\n",
+    "app.config['SQLALCHEMY_DATABASE_URI'] = 'sqlite:///cours-flask/db.sqlite'\n",
     "# On initie l'extension\n",
     "db = SQLAlchemy(app)\n",
     "\n",
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comment obtenir seulement le premier résultats\n",
+    "### Comment obtenir seulement le premier résultat\n",
     "\n",
     "On adjoint tout simple `.first()` à la fin de notre requête au lieu de `.all()`"
    ]
@@ -338,7 +338,7 @@
     "- on a un nombre maximal de résultats par page (20, 30, 50, 100, etc.)\n",
     "- une page\n",
     "\n",
-    "Les pages n'existant pas en requête SQL, on fait généralement une `LIMIT` qui permet de limiter le nombre de résultat par page et on convertit le numéro de la page en numéro du premier résultat à afficher via `LIMIT début, max` ou plutôt `LIMIT max OFFSET début` où \n",
+    "Les pages n'existant pas en requête SQL, on fait généralement une `LIMIT` qui permet de limiter le nombre de résultats par page et on convertit le numéro de la page en numéro du premier résultat à afficher via `LIMIT début, max` ou plutôt `LIMIT max OFFSET début` où \n",
     "- max est le nombre de résultat par page\n",
     "- début représente le numéro du premier résultat.\n",
     "\n",
@@ -347,7 +347,7 @@
     "1. `LIMIT 0, 30` ou `LIMIT 30 OFFSET 0` pour la page 1\n",
     "2. `LIMIT 30, 30` ou `LIMIT 30 OFFSET 30` pour la page 2\n",
     "\n",
-    "Mais cela reste très souvent énervant à écrire car il reste des questions à répondre pour l'interface elle-même:\n",
+    "Mais cela reste très souvent énervant à écrire, car il reste des questions à répondre pour l'interface elle-même:\n",
     "- Quand pouvez-vous afficher \"Page précédente\" et \"Page suivante\" ? Avez-vous assez de résultats après ?\n",
     "- Quel est le nombre maximum de pages ?\n",
     "- etc.\n",
@@ -420,10 +420,10 @@
    "source": [
     "#### Utilisation de paginate dans un template\n",
     "\n",
-    "La méthode `iter_pages()` est très efficace car elle génère automatiquement le numéro des pages à afficher à partir de 4 paramètres :\n",
+    "La méthode `iter_pages()` est très efficace, car elle génère automatiquement le numéro des pages à afficher à partir de 4 paramètres :\n",
     "- le nombre de pages à afficher au tout départ de la liste (les premières pages) : `left_edge`;\n",
-    "- le nombre de pages qui précède la page actuelle à afficher : `left_current`;\n",
-    "- le nombre de pages qui suive la page actuelle à afficher : `right_current`;\n",
+    "- le nombre de pages qui précèdent la page actuelle à afficher : `left_current`;\n",
+    "- le nombre de pages qui suivent la page actuelle à afficher : `right_current`;\n",
     "- le nombre de pages à afficher à la fin de la liste (les premières pages) : `right_edge`;\n",
     " \n",
     "Ainsi, pour 100 pages et la page 77, on aura pour les paramètres `.iter_pages(left_edge=2, left_current=2, right_current=5, right_edge=2)` : 1,2,75,76,77,78,79,80,81,82,99,100 où:\n",
@@ -513,7 +513,7 @@
     "\n",
     "#### Exercice\n",
     "\n",
-    "On proposera une interface de navigation de type index via une nouvelle route de l'application. La pagination réutilisera la limite `LIEUX_PAR_PAGES` trouvées dans `gazetteer.routes`."
+    "On proposera une interface de navigation de type index via une nouvelle route de l'application. La pagination réutilisera la limite `LIEUX_PAR_PAGES` trouvée dans `gazetteer.routes`."
    ]
   }
  ],
@@ -533,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
