--- a/Chapitre 11 - Session utilisateurs et insertions SQL.ipynb
+++ b/Chapitre 11 - Session utilisateurs et insertions SQL.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,11 +43,11 @@
    "source": [
     "## Créer des comptes\n",
     "\n",
-    "La création de compte est une des tâches les plus courantes dans le cadre d'un développement d'application. C'est aussi une des plus dangereuses : vous êtes responsables de la sécurité de vos utilisateurs et de leurs données. On apprendra donc ici à sécuriser un maximum nos données sensibles.\n",
+    "La création de comptes est une des tâches les plus courantes dans le cadre d'un développement d'application. C'est aussi une des plus dangereuses : vous êtes responsables de la sécurité de vos utilisateurs et de leurs données. On apprendra donc ici à sécuriser un maximum nos données sensibles.\n",
     "\n",
     "### Gérer des mots de passe\n",
     "\n",
-    "Pour enregister un mot de passe, on va *a minima* encrypter ce mot de passe. On utilise d'ailleurs à mauvais escient ce terme car ce que l'on va calculer réellement est un hash. Contrairement à l'encryptage, le hash n'est pas reversible. Si quelque chose est hashé en \"qqewretet\", la seule manière de trouver l'original est de \"brute-forcer\" ce dernier, c'est à dire de générer tous les mots de passe possibles (ce qui est, disons le, plutôt difficile).\n",
+    "Pour enregistrer un mot de passe, on va *à minima* encrypter ce mot de passe. On utilise d'ailleurs à mauvais escient ce terme car ce que l'on va calculer réellement est un hash. Contrairement au cryptage, le hash n'est pas réversible. Si quelque chose est hashé en \"qqewretet\", la seule manière de trouver l'original est de \"brute-forcer\" ce dernier, c'est-à-dire de générer tous les mots de passe possibles (ce qui est, disons-le, plutôt difficile).\n",
     "\n",
     "L'autre manière de casser un Hash, c'est d'avoir la malchance d'avoir l'algorithme de hashage de cassé. On en trouve trois actuellement recommandés (*cf.* *[\n",
     "About Secure Password Hashing](http://security.blogoverflow.com/2013/09/about-secure-password-hashing/)*).\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le sel devant être unique et non-devinable, on rajoute un avertissement au cas où la personne mettant ce site en fonctionnement n'avait pas connaissance de ce changement de configuration."
+    "Le sel devant être unique et non devinable, on rajoute un avertissement au cas où la personne mettant ce site en fonctionnement n'avait pas connaissance de ce changement de configuration."
    ]
   },
   {
@@ -102,11 +102,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour vérifier la validité de de l'identification de l'utilisateur, on va retrouver l'utilisateur, comparer le hash généré du mot de passe avec celui enregistré :\n",
+    "Pour vérifier la validité de l'identification de l'utilisateur, on va retrouver l'utilisateur, comparer le hash généré du mot de passe avec celui enregistré :\n",
     "\n",
     "```python\n",
     "def identification(login, motdepasse):\n",
-    "    \"\"\" Identifie un utilisateur. Si cela fonctionne, renvoie les données de l'utilisateurs.\n",
+    "    \"\"\" Identifie un utilisateur. Si cela fonctionne, renvoie les données de l'utilisateur.\n",
     "    \n",
     "    :param login: Login de l'utilisateur\n",
     "    :param motdepasse: Mot de passe envoyé par l'utilisateur\n",
@@ -131,7 +131,7 @@
     "    \n",
     "    @staticmethod\n",
     "    def identification(login, motdepasse):\n",
-    "        \"\"\" Identifie un utilisateur. Si cela fonctionne, renvoie les données de l'utilisateurs.\n",
+    "        \"\"\" Identifie un utilisateur. Si cela fonctionne, renvoie les données de l'utilisateur.\n",
     "\n",
     "        :param login: Login de l'utilisateur\n",
     "        :param motdepasse: Mot de passe envoyé par l'utilisateur\n",
@@ -157,9 +157,9 @@
    "source": [
     "#### Premier insert\n",
     "\n",
-    "On va maintenant effectuer notre premier insert ! Et oui, il va falloir créer des comptes. Pour créer un compte, il nous faudra aussi une fonction de création de compte.\n",
+    "On va maintenant effectuer notre premier insert ! Et oui, il va falloir créer des comptes. Pour créer un compte, il nous faudra aussi une fonction de création de comptes.\n",
     "\n",
-    "Pour créer un enregistrement ou une mise à jour, MySQL et SQLAlchemy fonctionne par session de changement, un peu comme git : on crée un ensemble de modification, on les stocke pour l'envoi (`db.session.add(lachoseaenvoyer)`) et on envoie à MySQL (`db.session.commit()`). Prenez le temps de bien lire le contenu qui suit :\n",
+    "Pour créer un enregistrement ou une mise à jour, SQL et SQLAlchemy fonctionnent par session de changement, un peu comme git : on crée un ensemble de modifications, on les stocke pour l'envoi (`db.session.add(lachoseaenvoyer)`) et on envoie à MySQL (`db.session.commit()`). Prenez le temps de bien lire le contenu qui suit :\n",
     "\n",
     "```python\n",
     "class User(db.model):\n",
@@ -272,30 +272,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting flask-login\n",
-      "  Downloading Flask-Login-0.4.1.tar.gz\n",
-      "Requirement already satisfied: Flask in ./env/lib/python3.5/site-packages (from flask-login)\n",
-      "Requirement already satisfied: Werkzeug>=0.7 in ./env/lib/python3.5/site-packages (from Flask->flask-login)\n",
-      "Requirement already satisfied: click>=2.0 in ./env/lib/python3.5/site-packages (from Flask->flask-login)\n",
-      "Requirement already satisfied: Jinja2>=2.4 in ./env/lib/python3.5/site-packages (from Flask->flask-login)\n",
-      "Requirement already satisfied: itsdangerous>=0.21 in ./env/lib/python3.5/site-packages (from Flask->flask-login)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in ./env/lib/python3.5/site-packages (from Jinja2>=2.4->Flask->flask-login)\n",
-      "Building wheels for collected packages: flask-login\n",
-      "  Running setup.py bdist_wheel for flask-login ... \u001b[?25ldone\n",
-      "\u001b[?25h  Stored in directory: /home/thibault/.cache/pip/wheels/25/4b/53/738919150a881bdebf1e2a7885fa7610a1ff7ff3e113a55fe1\n",
-      "Successfully built flask-login\n",
-      "Installing collected packages: flask-login\n",
-      "Successfully installed flask-login-0.4.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install flask-login"
    ]
@@ -321,7 +300,7 @@
     "- `is_authenticated` : une propriété, elle retournera True si l'utilisateur-rice est connecté-e, False sinon\n",
     "- `is_active` : une propriété, elle retournera True si l'utilisateur-rice est actif-ve, False sinon. \n",
     "    - Le caractère actif des membres de notre site n'est pas utilisé, pourtant, il faudra remplir cette case. On renverra donc True\n",
-    "- `is_anonymous` : une propriété qui retournera False pour les utilisateur-rices non-anonymes.\n",
+    "- `is_anonymous` : une propriété qui retournera False pour les utilisateur-rices non anonymes.\n",
     "- `get_id(identifier)` : une fonction qui retournera l'utilisateur pour l'ID donné\n",
     "\n",
     "**Mais** les choses sont bien faites, Flask Login propose un outil pour ne pas avoir à coder cela soit même : `flask_login.UserMixin` :\n",
@@ -364,7 +343,7 @@
     ">>> 2\n",
     "```\n",
     "\n",
-    "Il va quand même falloir définir nous même une fonction qui permettra de récupérer un utilisateur en fonction de son identifiant (toujours dans `utilisateur.py`) :\n",
+    "Il va quand même falloir définir nous-mêmes une fonction qui permettra de récupérer un utilisateur en fonction de son identifiant (toujours dans `utilisateur.py`) :\n",
     "\n",
     "```python\n",
     "from app import login\n",
@@ -507,7 +486,7 @@
    "source": [
     "#### Exercice\n",
     "\n",
-    "Ecrire une page pour créer un nouveau lieu seulement quand on est connecté. Pour limiter la capacité à accéder à une page, on précède la route de `flask_login.login_required` :\n",
+    "Écrire une page pour créer un nouveau lieu seulement quand on est connecté. Pour limiter la capacité à accéder à une page, on précède la route de `flask_login.login_required` :\n",
     "\n",
     "```python\n",
     "from flask_login import login_required\n",
@@ -534,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
