Updated some typos in 12, 13, 14

--- a/Chapitre 12 - Jointures SQL et Update.ipynb
+++ b/Chapitre 12 - Jointures SQL et Update.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "## Commencer par le commencement : la jointure\n",
     "\n",
-    "En SQL, une jointure est une requête effectuée sur plusieurs tables ensembles. Cela permet ainsi d'éviter de multiplier les communications avec le serveur SQL. Cependant, mal faites, elles peuvent rapidement poser des problèmes de performance. \n",
+    "En SQL, une jointure est une requête effectuée sur plusieurs tables ensemble. Cela permet ainsi d'éviter de multiplier les communications avec le serveur SQL. Cependant, mal faites, elles peuvent rapidement poser des problèmes de performance. \n",
     "\n",
     "L'avantage de SQLAlchemy est le suivant : les jointures sont faciles à effectuer. La jointure que nous voulons faire est simple : nos utilisateurs pouvant créer ou éditer des objets, on a une relation de n-n (ou *many-to-many*) entre notre Place et notre User. Dans ce genre de conditions, on crée une table de liaison entre nos objets: c'est la table authorship !\n",
     "\n",
@@ -177,9 +177,9 @@
    "metadata": {},
    "source": [
     "###  `db.relationship`\n",
-    "`db.relationship()` permet de construire des relations directes entre les objets et de naviguer entre eux. Ainsi, dans l'insertion, on n'utilise pas `place_id` ou `user_id` mais bien `place` et `user`. \n",
+    "`db.relationship()` permet de construire des relations directes entre les objets et de naviguer entre eux. Ainsi, dans l'insertion, on n'utilise pas `place_id` ou `user_id`, mais bien `place` et `user`. \n",
     "\n",
-    "La fonction `db.relationship` est tout à fait différente de `db.Column()` en ce qu'elle n'intervient pas sur la structure MySQL de vos classes mais permet simplement de connecter vos différentes classes. Elle est construite sur deux paramètres:\n",
+    "La fonction `db.relationship` est tout à fait différente de `db.Column()` en ce qu'elle n'intervient pas sur la structure MySQL de vos classes, mais permet simplement de connecter vos différentes classes. Elle est construite sur deux paramètres:\n",
     "- le premier paramètre correspond au nom de la classe Python qui est liée à la propriété\n",
     "- le second paramètre (`back_populates`), qui est optionnel, correspond à la propriété dans la classe cible qui contient la même information en miroir. Ainsi `Authorship.user` lie vers `User` tandis que `User.authorships` lie vers `Authorship`.\n",
     "\n",
@@ -271,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
