--- a/Chapitre 13 - Créer une API.ipynb
+++ b/Chapitre 13 - Créer une API.ipynb
@@ -39,13 +39,13 @@
     "\n",
     "Le chemin JSON correspondant est `[\"results\"][2]` où l'on trouve les analyses en dans une liste telle que `[\"results\"][2][\"analysis\"][0][\"lemmas\"][0][\"lemma\"]` est égal à `cano`. Il est aussi très facile de boucler dessus.\n",
     "\n",
-    "| Élément de comparaisons | HTML   | JSON   |\n",
+    "| Élément de comparaison | HTML   | JSON   |\n",
     "| ----------------------- | ------ | ------ |\n",
-    "| Poids                   | 7364 o | 5257 o (Mais avec plus d'informations propres à la requête) |\n",
+    "| Poids                   | 7364 o | 5257 o (mais avec plus d'informations propres à la requête) |\n",
     "| Parsage                 | Capable d'échouer si une page web est mal construire dans son header | Très peu probable d'échouer |\n",
     "| Disponibilités dans les langages | Moyenne (librairies externes souvent) | Élevée |\n",
     "\n",
-    "Il va s'en dire que, d'abord pour le poids et la facilité de lecture machine, **le JSON est le plus abordable**. Il existe d'autres formats acceptable (XML par exemple) mais pour toute donnée structurée autre que du texte balisé, il est recommandé de passer par du JSON (Sur ce point : *[Mobile Performance testing JSON vs XML (2016)](https://www.infragistics.com/community/blogs/b/torrey-betts/posts/mobile-performance-testing-json-vs-xml), [JSON vs XML: A Comparative Performance Analysis  of Data Exchange Formats](http://ijcsn.org/IJCSN-2014/3-4/JSON-vs-XML-A-Comparative-Performance-Analysis-of-Data-Exchange-Formats.pdf), [JSON ou XML, quel format choisir? ](https://www.scriptol.fr/ajax/json-xml.php)*)"
+    "Il va s'en dire que, d'abord pour le poids et la facilité de lecture machine, **le JSON est le plus abordable**. Il existe d'autres formats acceptable (XML par exemple) mais pour toute donnée structurée autre que du texte balisé, il est recommandé de passer par du JSON (sur ce point : *[Mobile Performance testing JSON vs XML (2016)](https://www.infragistics.com/community/blogs/b/torrey-betts/posts/mobile-performance-testing-json-vs-xml), [JSON vs XML: A Comparative Performance Analysis  of Data Exchange Formats](http://ijcsn.org/IJCSN-2014/3-4/JSON-vs-XML-A-Comparative-Performance-Analysis-of-Data-Exchange-Formats.pdf), [JSON ou XML, quel format choisir? ](https://www.scriptol.fr/ajax/json-xml.php)*)"
    ]
   },
   {
@@ -60,22 +60,22 @@
     "\n",
     "#### Flask et les Response\n",
     "\n",
-    "Votre premier réflexe sera sûrement d'utiliser **`json.dumps()`**. Cela montre que vous avez compris le cour. Cependant... **cela ne sera pas suffisant.**\n",
+    "Votre premier réflexe sera surement d'utiliser **`json.dumps()`**. Cela montre que vous avez compris le cours. Cependant... **cela ne sera pas suffisant.**\n",
     "\n",
     "Rappelez-vous, sur le web, une réponse est basée sur trois paramètres :\n",
     "- les headers\n",
     "- le code http\n",
     "- le corps\n",
     "\n",
-    "Or, si l'on fait `return json.dumps()` nous ne retournons qu'une chaîne de caractères... Mais alors, que faisait `render_template` me demanderez-vous ?\n",
+    "Or, si l'on fait `return json.dumps()` nous ne retournons qu'une chaine de caractères... Mais alors, que faisait `render_template` me demanderez-vous ?\n",
     "\n",
-    "En fait, `render_template()` ne renvoit pas une chaîne de caractère (c'était prévisible...) mais un objet `Response` qui est constitué d'un corps, d'un code http et d'un headers. Et vu que vous envoyez un template en html, la réponse dit \"bon, le code par défaut, c'est *200* et les headers, on va prévenir que le mimetype du corps est *html*\".\n",
+    "En fait, `render_template()` ne renvoit pas une chaine de caractère (c'était prévisible...) mais un objet `Response` qui est constitué d'un corps, d'un code http et d'un headers. Et vu que vous envoyez un template en html, la réponse dit \"bon, le code par défaut, c'est *200* et les headers, on va prévenir que le mimetype du corps est *html*\".\n",
     "\n",
     "Et de fait, Flask, pour fonctionner véritablement correctement, a besoin de `Reponse`. Une [`Response`](http://flask.pocoo.org/docs/0.12/api/#response-objects) a 2 paramètres qui nous importent:\n",
-    "- `.headers` qui se comportent comme un dictionnaire\n",
+    "- `.headers` qui se comporte comme un dictionnaire\n",
     "- `.status_code` qui se comportent comme un entier\n",
     "\n",
-    "de tel manière que l'on peut écrire :\n",
+    "de telle manière que l'on peut écrire :\n",
     "\n",
     "```python\n",
     "from flask import Flask, Response\n",
@@ -108,7 +108,7 @@
     "\n",
     "#### La méthode rapide\n",
     "\n",
-    "Tout développeur-se étant un-e fainéant-e intelligent-e (ou inversement), l'équipe derrière Flask a ajouté une fonction un peu raccourci pour le même résultat que le dernier exemple : `flask.jsonify()` :\n",
+    "Tout développeur-se étant un-e fainéant-e intelligent-e (ou inversement), l'équipe derrière Flask a ajouté une fonction un peu raccourcie pour le même résultat que le dernier exemple : `flask.jsonify()` :\n",
     "\n",
     "```python\n",
     "from flask import Flask, jsonify\n",
@@ -145,7 +145,7 @@
    "source": [
     "### Tout n'est pas `jsonifiable` de base....\n",
     "\n",
-    "Nous avons vu jusque là qu'il était facile de convertir dictionnaires, listes, booléens, nombres, `None` et autres types très simple de Python. Qu'en est-il des données plus complexes telles que nous avons récupérées de notre base de données ?\n",
+    "Nous avons vu jusque là qu'il était facile de convertir dictionnaires, listes, booléens, nombres, `None` et autres types très simples de Python. Qu'en est-il des données plus complexes telles que nous avons récupéré de notre base de données ?\n",
     "\n",
     "`jsonify` étant basé sur `json.dumps()`, nous pouvons essayer `json.dumps()` sur nos objets :"
    ]
@@ -398,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
