--- a/Chapitre 14 - Ecrire des tests.ipynb
+++ b/Chapitre 14 - Ecrire des tests.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Chapitre 13 - Ecrire des tests\n",
+    "Chapitre 13 - Écrire des tests\n",
     "===\n",
     "\n",
     "Si nous avons couvert l'écriture de tests dans d'autres cours et dans quelques discussions, la rédaction de test reste encore quelque peu un mystère. Et pour cause.\n",
     "\n",
-    "Les tests cherchent à vérifier un ensemble de fonctionnement :\n",
+    "Les tests cherchent à vérifier un ensemble de fonctionnements :\n",
     "- les blocs programmés, pris séparément, fonctionnent correctement\n",
     "- ces blocs interagissent correctement les uns avec les autres\n",
     "- (pour les applications graphiques) la partie graphique de l'application interagit correctement avec la partie \"cachée\"\n",
@@ -50,7 +50,7 @@
     "\n",
     "Pour python, heureusement, il existe des librairies plus complètes :\n",
     "- `unittest` qui est incluse par défaut dans python\n",
-    "- `nosetest` qui est installable via `pypi` et qui est rétro-compatible avec `unittest`\n",
+    "- `nosetest` qui est installable via `pypi` et qui est rétrocompatible avec `unittest`\n",
     "- `py.test` qui est moins verbeux que les deux précédents et utilise beaucoup `assert`\n",
     "\n",
     "Dans le cadre de ce cours, nous verrons le premier **unittest**. Sachez cependant que ce choix peut varier suivant :\n",
@@ -66,8 +66,8 @@
     "\n",
     "Unittest est très facile à utiliser. Nous devons: \n",
     "1. Créer une classe dérivée de `unittest.TestCase`\n",
-    "2. Créer des fonctions commencant par `test_`\n",
-    "3. Utiliser des termes vérifiant les égalités tels que `assertEqual(x,y, message=None)`, `assertGreaterThan()`, etc.\n",
+    "2. Créer des fonctions commençant par `test_`\n",
+    "3. Utiliser des termes vérifiant les égalités telles que `assertEqual(x,y, message=None)`, `assertGreaterThan()`, etc.\n",
     "\n",
     "Prenons comme exemple notre fonction précédente"
    ]
@@ -122,7 +122,7 @@
    "source": [
     "On voit ici 3 choses :\n",
     "- une fonction peut contenir une ou plusieurs assertions\n",
-    "- certaines assertions comme `assertRaises` s'utilise surtout avec `with`\n",
+    "- certaines assertions comme `assertRaises` s'utilisent surtout avec `with`\n",
     "- quand un test échoue, des détails sont donnés. Ici on se rend compte que les calculs ne sont pas si faciles quand il est question de décimaux...\n",
     "\n",
     "#### Les assertions de `unittest`\n",
@@ -156,9 +156,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Mais si on ne les lance pas comme ca...\n",
+    "#### Mais si on ne les lance pas comme ça...\n",
     "\n",
-    "Comment les lance-t-on ? Typiquement, les dossiers de développement ressembleront à ca : \n",
+    "Comment les lance-t-on ? Typiquement, les dossiers de développement ressembleront à ça : \n",
     "\n",
     "- Dossier de travail\n",
     "    - dossier_application (Module principal)\n",
@@ -192,9 +192,9 @@
     "\n",
     "### `setUp` et `tearDown`\n",
     "\n",
-    "Les fonctions de mise en place et de destruction sont des fonctions qui seront lancées avant chacun des tests d'une classe. Elle permette par exemple de générer une application et de tester cette application plusieurs fois. Ou de rentrer des données dans une base de données.\n",
+    "Les fonctions de mise en place et de destruction sont des fonctions qui seront lancées avant chacun des tests d'une classe. Elles permettent par exemple de générer une application et de tester cette application plusieurs fois. Ou de rentrer des données dans une base de données.\n",
     "\n",
-    "Exemple en mi-pseudocode mi-python  :\n",
+    "Exemple en mi-pseudocode, mi-python  :\n",
     "\n",
     "\n",
     "```python\n",
@@ -229,7 +229,7 @@
     "\n",
     "Un mock est une fonction qui va venir remplacer une autre fonction capable d'échouer. Très souvent, ces `Mocks` viennent aider à tester des services externes tels que des APIs hébergées par d'autres sites qui pourraient ne pas apprécier d'être la source de tests.\n",
     "\n",
-    "Nous n'aborderons pas les mocks ici mais vous pouvez trouver quelques tutoriaux en ligne :\n",
+    "Nous n'aborderons pas les mocks ici, mais vous pouvez trouver quelques tutoriels en ligne :\n",
     "- http://python-mock-tutorial.readthedocs.io/en/latest/introduction.html\n",
     "- https://realpython.com/blog/python/testing-third-party-apis-with-mocks"
    ]
@@ -242,7 +242,7 @@
     "\n",
     "### Avant-propos \n",
     "\n",
-    "Pour tester une application, et *a priori* une application qui va posséder une base de données, le premier pas va être de générer un ensemble de données qui sera utilisé pour pouvoir testers les différentes pages. Dans cet avant-propos, nous allons voir quelques conseils permettant de bien travailler avec SQLAlchemy et les tests.\n",
+    "Pour tester une application, et *à priori* une application qui va posséder une base de données, le premier pas va être de générer un ensemble de données qui sera utilisé pour pouvoir testers les différentes pages. Dans cet avant-propos, nous allons voir quelques conseils permettant de bien travailler avec SQLAlchemy et les tests.\n",
     "\n",
     "#### Génération de la base de données\n",
     "\n",
@@ -264,13 +264,13 @@
     "\n",
     "##### Scripts de migration\n",
     "\n",
-    "Des outils bien plus complets ainsi qu'un tutorial pour permettre les migrations sont disponibles sur le site  de M. Grinberg ( [SQLAlchemy - Flask Mega Tutorial](https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-iv-database) ).\n",
+    "Des outils bien plus complets ainsi qu'un tutoriel pour permettre les migrations sont disponibles sur le site  de M. Grinberg ( [SQLAlchemy - Flask Mega Tutorial](https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-iv-database) ).\n",
     "\n",
     "#### Configuration tests et configuration production\n",
     "\n",
-    "Le problème des scripts précédents, c'est qu'ils risquent fortement de détruire les données que nous avons déjà rentré. Ou pire, ils pourraient facilement se retrouver sur le site en production et détruire les données dessus. Comment limiter ce risque ? En multipliant les configurations.\n",
+    "Le problème des scripts précédents, c'est qu'ils risquent fortement de détruire les données que nous avons déjà rentrées. Ou pire, ils pourraient facilement se retrouver sur le site en production et détruire les données dessus. Comment limiter ce risque ? En multipliant les configurations.\n",
     "\n",
-    "Il y a beaucoup de manière de faire cela : variables environnementales (variable spécifique à votre machine), configurations multiples dans un module config, etc. Nous allons voir une méthode qui me semble particulièrement facile d'utilisation.\n",
+    "Il y a beaucoup de manières de faire cela : variables environnementales (variable spécifique à votre machine), configurations multiples dans un module config, etc. Nous allons voir une méthode qui me semble particulièrement facile d'utilisation.\n",
     "\n",
     "**Attention:** cette méthode est très susceptible à l'ordre de création des autres variables !\n",
     "\n",
@@ -297,8 +297,8 @@
     "}\n",
     "```\n",
     "\n",
-    "- On crée deux classes qui possède des propriétés similaires aux configurations nécessaires de Flask\n",
-    "    - Commencer un nom de variable, de classe ou de fonction par un `_` signifie qu'elle ne devrait pas être appellée directement.\n",
+    "- On crée deux classes qui possèdent des propriétés similaires aux configurations nécessaires de Flask\n",
+    "    - Commencer un nom de variable, de classe ou de fonction par un `_` signifie qu'elle ne devrait pas être appelée directement.\n",
     "- On les regroupe dans un dictionnaire\n",
     "\n",
     "##### gazetteer/app.py\n",
@@ -428,7 +428,7 @@
     "2. On garder la capacité d'insérer ou non des données (préférences personnelles).\n",
     "3. Une fois l'application générée, on génère un client de test qui nous permettra de faire des requêtes (`test_client()`)\n",
     "4. On utilise ce client pour faire des requêtes. Les réponses sont composées de :\n",
-    "    - `.headers` qui est un dictonnaire\n",
+    "    - `.headers` qui est un dictionnaire\n",
     "    - `.data` qui est un `bytes`. On le transforme facilement en `str` via `chaine = response.data.decode()`\n",
     "    - `.status_code` qui est le code réponse HTTP\n",
     "    \n",
@@ -436,7 +436,7 @@
     "\n",
     "### Tests mixtes\n",
     "\n",
-    "Des tests ont été écrits dans `cours-flask/exemple18`. Regardez les. Nous pouvons les exécutez d'ici via la commande qui suit."
+    "Des tests ont été écrits dans `cours-flask/exemple18`. Regardez-les. Nous pouvons les exécuter d'ici via la commande qui suit."
    ]
   },
   {
