Updated a bit how the chapter 12 works

--- a/Chapitre 12 - Jointures SQL et Update - Exercice Jointure.ipynb
+++ b/Chapitre 12 - Jointures SQL et Update - Exercice Jointure.ipynb
@@ -20,7 +20,7 @@
     "from flask_sqlalchemy import SQLAlchemy\n",
     "\n",
     "app = Flask(\"Nom\")\n",
-    "app.config['SQLALCHEMY_DATABASE_URI'] = 'mysql://gazetteer_user:password@localhost/gazetteer'\n",
+    "app.config['SQLALCHEMY_DATABASE_URI'] = 'sqlite:///cours-flask/db.sqlite'\n",
     "app.config[\"SQLALCHEMY_TRACK_MODIFICATIONS\"] = False\n",
     "db = SQLAlchemy(app)"
    ]
@@ -74,7 +74,11 @@
     "    \n",
     "    \n",
     "class Variante(db.Model):\n",
-    "    # A compléter"
+    "    # A compléter\n",
+    "    variante_id\n",
+    "    variante_nom\n",
+    "    variante_lang_code\n",
+    "    variante_place_id"
    ]
   },
   {
@@ -114,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
