--- a/Chapitre 12 - Jointures SQL et Update.ipynb
+++ b/Chapitre 12 - Jointures SQL et Update.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,14 +39,14 @@
     "from flask_sqlalchemy import SQLAlchemy\n",
     "\n",
     "app = Flask(\"Nom\")\n",
-    "app.config['SQLALCHEMY_DATABASE_URI'] = 'mysql://gazetteer_user:password@localhost/gazetteer'\n",
+    "app.config['SQLALCHEMY_DATABASE_URI'] = 'sqlite:///cours-flask/db.sqlite'\n",
     "app.config[\"SQLALCHEMY_TRACK_MODIFICATIONS\"] = False\n",
     "db = SQLAlchemy(app)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,9 +198,11 @@
     "    )\n",
     "```\n",
     "\n",
+    "![Schema](images/BackPopulate.png)\n",
+    "\n",
     "### Exercice\n",
     "\n",
-    "L'exercice se fait dans un notebook externe : [lien vers l'exercice](./Chapitre 11 - Jointures SQL et Update - Exercice Jointure.ipynb)\n"
+    "L'exercice se fait dans un notebook externe : [lien vers l'exercice](./Chapitre%2012%20-%20Jointures%20SQL%20et%20Update%20-%20Exercice%20Jointure.ipynb)\n"
    ]
   },
   {
@@ -209,7 +211,8 @@
    "source": [
     "## Update, vous avez dit Update ?\n",
     "\n",
-    "En MySql et en gestion de données, on parle généralement de CRUD : Create-Read-Update-Delete. Nous avons vu les deux premiers, le quatrième s'écrite simplement `Place.query.get(1).delete()` ce qui n'est pas très compliqué... Alors, comment corriger un enregistrement ?\n",
+    "En SQL\n",
+    "et en gestion de données, on parle généralement de CRUD : Create-Read-Update-Delete. Nous avons vu les deux premiers, le quatrième s'écrite simplement `Place.query.get(1).delete()` ce qui n'est pas très compliqué... Alors, comment corriger un enregistrement ?\n",
     "\n",
     "La modification d'une ligne SQL se fait assez simplement :\n",
     "1. On récupère l'objet\n",
