--- a/Chapitre 14 - Ecrire des tests.ipynb
+++ b/Chapitre 14 - Ecrire des tests.ipynb
@@ -441,20 +441,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/thibault/dev/MM-Python-Course/cours-flask/exemple18/gazetteer/constantes.py:8: Warning: Le secret par défaut n'a pas été changé, vous devriez le faire\n",
-      "  warn(\"Le secret par défaut n'a pas été changé, vous devriez le faire\", Warning)\n",
-      "...\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.306s\n",
-      "\n",
-      "OK\n"
+      "EE\r\n",
+      "======================================================================\r\n",
+      "ERROR: tests.test_api (unittest.loader._FailedTest)\r\n",
+      "----------------------------------------------------------------------\r\n",
+      "ImportError: Failed to import test module: tests.test_api\r\n",
+      "Traceback (most recent call last):\r\n",
+      "  File \"/usr/lib/python3.6/unittest/loader.py\", line 428, in _find_test_path\r\n",
+      "    module = self._get_module_from_name(name)\r\n",
+      "  File \"/usr/lib/python3.6/unittest/loader.py\", line 369, in _get_module_from_name\r\n",
+      "    __import__(name)\r\n",
+      "  File \"/home/thibault/dev/cours-python/cours-flask/exemple18/tests/test_api.py\", line 1, in <module>\r\n",
+      "    from .base import Base\r\n",
+      "  File \"/home/thibault/dev/cours-python/cours-flask/exemple18/tests/base.py\", line 1, in <module>\r\n",
+      "    from gazetteer.app import db, config_app, login\r\n",
+      "  File \"/home/thibault/dev/cours-python/cours-flask/exemple18/gazetteer/app.py\", line 3, in <module>\r\n",
+      "    from flask_login import LoginManager\r\n",
+      "ModuleNotFoundError: No module named 'flask_login'\r\n",
+      "\r\n",
+      "\r\n",
+      "======================================================================\r\n",
+      "ERROR: tests.test_user (unittest.loader._FailedTest)\r\n",
+      "----------------------------------------------------------------------\r\n",
+      "ImportError: Failed to import test module: tests.test_user\r\n",
+      "Traceback (most recent call last):\r\n",
+      "  File \"/usr/lib/python3.6/unittest/loader.py\", line 428, in _find_test_path\r\n",
+      "    module = self._get_module_from_name(name)\r\n",
+      "  File \"/usr/lib/python3.6/unittest/loader.py\", line 369, in _get_module_from_name\r\n",
+      "    __import__(name)\r\n",
+      "  File \"/home/thibault/dev/cours-python/cours-flask/exemple18/tests/test_user.py\", line 1, in <module>\r\n",
+      "    from .base import Base\r\n",
+      "  File \"/home/thibault/dev/cours-python/cours-flask/exemple18/tests/base.py\", line 1, in <module>\r\n",
+      "    from gazetteer.app import db, config_app, login\r\n",
+      "  File \"/home/thibault/dev/cours-python/cours-flask/exemple18/gazetteer/app.py\", line 3, in <module>\r\n",
+      "    from flask_login import LoginManager\r\n",
+      "ModuleNotFoundError: No module named 'flask_login'\r\n",
+      "\r\n",
+      "\r\n",
+      "----------------------------------------------------------------------\r\n",
+      "Ran 2 tests in 0.000s\r\n",
+      "\r\n",
+      "FAILED (errors=2)\r\n"
      ]
     }
    ],
